# PhotoShare

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  main.py  pyproject.toml  ratings_main.py  readme.md  requirements.txt  sql_app.db  tags_main.py  test.db
alembic/: env.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 6af178b7c88c_init.py  7931ccbc805a_second.py  79e33bb6eaf2_add_user_to_image.py  79e593e58199_init.py  b21633995a7b_init.py  cf2665a1db6b_ratings.py  d2bb63b969a7_init.py  dd1540183b33_rating_change.py  e80f4b9d9a8f_init2.py  ef411eb6b8a0_init2.py
migrations2/versions/: 2551ea7427a1_initi3.py  33a7322b9970_add_ratings.py  428bdddef9c5_change_user_add_default_0_to_photo_count.py  ac6a8e3eb141_18_06_23.py  b7ecc89aa603_changed_transformed_image.py
src/conf/: config.py  messages.py
src/database/: comments_model.py  db.py  models.py  roles.py  tag_models.py
src/database/models/: comment_model.py  image_model.py  rating_models.py  tag_models.py  (+3 more)
src/repository/: comments.py  images.py  ratings.py  search.py  tags.py  transformed_images.py  transformed_picture.py  users.py
src/routes/: auth.py  comments_routes.py  images.py  ratings.py  search.py  tags.py  transformed_images.py  transformed_picture.py  users.py
src/schemas/: auth_schemas.py  comment_schemas.py  image_schemas.py  rating_schemas.py  tag_schemas.py  transformed_image_schemas.py  transformed_picture_schemas.py  user_schemas.py
src/services/: auth.py  email.py  images.py  roles.py  transform_picture.py  transformed_image.py  transformed_picture.py
tests/: conftest.py  test.db  test_rep_users.py  test_repo_images.py  test_repository_search.py  test_repository_transformed_images.py  test_rout_users.py  test_route_comment_routes.py  test_route_images.py  test_route_raitings.py  test_route_search.py  test_route_tags.py  test_route_transformed_images.py  test_service_images.py  test_services_transformed_image.py  tests_route_auth.py
(+1 files in other folders)
