[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["MartynyukAndriy <andriy.martynyuk.if@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^4.5.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.8"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
